--- a/.gitignore
+++ b/.gitignore
@@ -107,6 +107,9 @@ modules.xml
 *.log
 *.html
 
+# Screenshots
+*.png
+
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 
